[Fix] - add resizing and search inputs in add remove pop up table         add the 3 dropdowns in Impacts view         align items in plt table header         fix drag and drop on pure view         fix drag and drop from generic thread when table empty         auto complete for load template search input         implements load template in state         add Export to Excel in EP Metric         fix highlight adjustment when its dragged from generic thread

--- a/RR-Front/src/app/workspace/components/calibration/calibration-main-table/calibration-main-table.component.scss
+++ b/RR-Front/src/app/workspace/components/calibration/calibration-main-table/calibration-main-table.component.scss
@@ -1016,6 +1016,7 @@
         border-bottom: 1px solid rgba(0, 0, 0, 0.15) !important;
         border-top: 1px solid rgba(0, 0, 0, 0.15) !important;
         text-align: center !important;
+        padding: 0 !important;
 
         .filter-input {
           width: 100%;
